zod-rs/zod-rs-macros/tests/compile_fail/union_not_supported.rs
//! Test that unions are not supported.

use zod_rs_macros::ZodSchema;

#[derive(ZodSchema)]
union MyUnion {
    i: i32,
    f: f32,
}

fn main() {}
